# mutatis-mutandis

./: .gitignore  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.cla-signatures/v1/: cla.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  codeql.yml  dep-scan.yml  license-check.yml  pattern-check.yml  release.yml  sbom.yml  scorecard.yml  stale.yml
data/: README.md  get_lawschool_data.py
src/: analysis_law_school.ipynb  get_cf_data_law_school.R  run_exp_law_school.py
src/situation_testing/: __init__.py  _distance_functions.py  _utils.py  situation_testing.py
tests/: test_distance_functions.py  test_situation_testing.py  test_utils.py
